kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: burrito-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/burrito(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: burrito
                port:
                  number: 8080
    - http:
        paths:
          - path: /api/nginx
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
